@@ -1,11 +1,48 @@
-FROM sismics/ubuntu-jetty:9.4.12-2
-MAINTAINER b.gamard@sismics.com
+FROM sismics/ubuntu-jetty:11.0.14
+LABEL maintainer="b.gamard@sismics.com"
 
-RUN apt-get update && apt-get -y -q install ffmpeg mediainfo tesseract-ocr tesseract-ocr-fra tesseract-ocr-ita tesseract-ocr-kor tesseract-ocr-rus tesseract-ocr-ukr tesseract-ocr-spa tesseract-ocr-ara tesseract-ocr-hin tesseract-ocr-deu tesseract-ocr-pol tesseract-ocr-jpn tesseract-ocr-por tesseract-ocr-tha tesseract-ocr-jpn tesseract-ocr-chi-sim tesseract-ocr-chi-tra tesseract-ocr-nld tesseract-ocr-tur && \
-    apt-get clean && rm -rf /var/lib/apt/lists/*
+RUN apt-get update && \
+    apt-get -y -q --no-install-recommends install \
+    ffmpeg \
+    mediainfo \
+    tesseract-ocr \
+    tesseract-ocr-ara \
+    tesseract-ocr-ces \
+    tesseract-ocr-chi-sim \
+    tesseract-ocr-chi-tra \
+    tesseract-ocr-dan \
+    tesseract-ocr-deu \
+    tesseract-ocr-fin \
+    tesseract-ocr-fra \
+    tesseract-ocr-heb \
+    tesseract-ocr-hin \
+    tesseract-ocr-hun \
+    tesseract-ocr-ita \
+    tesseract-ocr-jpn \
+    tesseract-ocr-kor \
+    tesseract-ocr-lav \
+    tesseract-ocr-nld \
+    tesseract-ocr-nor \
+    tesseract-ocr-pol \
+    tesseract-ocr-por \
+    tesseract-ocr-rus \
+    tesseract-ocr-spa \
+    tesseract-ocr-swe \
+    tesseract-ocr-tha \
+    tesseract-ocr-tur \
+    tesseract-ocr-ukr \
+    tesseract-ocr-vie \
+    tesseract-ocr-sqi && \
+    apt-get clean && rm -rf /var/lib/apt/lists/* && \
+    mkdir /app && \
+    cd /app && \
+    java -jar /opt/jetty/start.jar --add-modules=server,http,webapp,deploy
 
-# Remove the embedded javax.mail jar from Jetty
-RUN rm -f /opt/jetty/lib/mail/javax.mail.glassfish-*.jar
+ADD docs.xml /app/webapps/docs.xml
+ADD docs-web/target/docs-web-*.war /app/webapps/docs.war
 
-ADD docs.xml /opt/jetty/webapps/docs.xml
-ADD docs-web/target/docs-web-*.war /opt/jetty/webapps/docs.war
+ENV JAVA_OPTIONS -Xmx1g
+
+WORKDIR /app
+CMD ["java", "-jar", "/opt/jetty/start.jar"]
+
